src/test/deca/syntax/invalid/circular_include.deca
#include "circular_include2.deca"

{
print("ok");
}